# claude-pilot

./: CLAUDE.md  Cargo.toml  README.en.md  README.md
.github/workflows/: test.yml
skills/pilot/: SKILL.md
src/: error.rs  lib.rs  main.rs
src/agent/: direct_agent.rs  executor.rs  mod.rs  prompt.rs  task_agent.rs
src/cli/: commands.rs  display.rs  interactive.rs  mod.rs
src/config/: mod.rs  model.rs  settings.rs
src/context/: budget.rs  compaction.rs  estimator.rs  manager.rs  mod.rs  persistence.rs  task_context.rs  types.rs
src/domain/: mod.rs  primitives.rs  progress.rs
src/git/: mod.rs  runner.rs
src/isolation/: manager.rs  mod.rs  planner.rs
src/learning/: candidates.rs  extractor.rs  history.rs  mod.rs  writer.rs
src/mission/: mod.rs  status.rs  store.rs  task.rs  types.rs
src/notification/: events.rs  mod.rs  notifier.rs
src/orchestration/: mission.rs  mod.rs  scope.rs
src/orchestrator/: engine.rs  focus.rs  lifecycle.rs  mod.rs  signal.rs
src/output/: mod.rs  writer.rs
src/planning/: artifacts.rs  chunked.rs  complexity.rs  evidence.rs  graph.rs  mod.rs  orchestrator.rs  plan_agent.rs  spec.rs  task_quality.rs  task_scorer.rs  tasks.rs  validation.rs
src/quality/: config.rs  mod.rs  types.rs
src/recovery/: analyzer.rs  checkpoint.rs  escalation.rs  executor.rs  mod.rs  reasoning.rs  retry_analyzer.rs  types.rs
src/search/: index.rs  mod.rs  query.rs  record.rs
src/session/: bridge.rs  config.rs  mod.rs
src/state/: event_store.rs  events.rs  machine.rs  mod.rs  projections.rs  replay.rs  snapshots.rs  writer.rs
src/strategy/: mod.rs
src/summarization/: compressor.rs  mod.rs
src/symora/: client.rs  mod.rs  types.rs
src/utils/: file_ops.rs  format.rs  mod.rs  string.rs  tokenizer.rs
src/verification/: archive.rs  checks.rs  convergent.rs  (+9 more)
tests/: actual_multi_agent_flow_verification.rs  architecture_verification_test.rs  cli_tests.rs  comprehensive_hierarchical_e2e_tests.rs  comprehensive_multi_agent_e2e.rs  config_tests.rs  consensus_protocol_e2e.rs  context_tests.rs  cross_workspace_consensus_e2e.rs  e2e_multi_agent_tests.rs  isolation_tests.rs  mission_tests.rs  multi_agent_integration_tests.rs  notification_tests.rs  real_e2e_multi_agent_tests.rs  real_multi_agent_e2e_comprehensive.rs  session_architecture_integration_tests.rs
(+190 files in other folders)
