[package]
name = "claude-pilot"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
description = "Mission orchestrator for Claude Code that manages sub-agents and task execution"
license = "MIT"
repository = "https://github.com/anthropics/claude-pilot"

[dependencies]
# Claude Agent SDK
claude-agent = { version = "0.2", features = ["jsonl", "plugins"] }

# Shared schema definitions
modmap = "1.0"

# Concurrent data structures
dashmap = "6.1"

# Semver for schema validation
semver = { version = "1.0", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_bw = "2.5"
toml = "0.8"

# JSON Schema generation for structured output
schemars = "1.2"

# Macro utilities
paste = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File system and path handling
walkdir = "2.5"
glob = "0.3"
ignore = "0.4"

# UUID for mission IDs
uuid = { version = "1.19", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Git operations
git2 = "0.20"

# Terminal UI
console = "0.15"
indicatif = { version = "0.17", features = ["tokio"] }

# Regex
regex = "1.12"

# Token estimation
tiktoken-rs = "0.9"

# Cryptographic hashing for consensus
sha2 = "0.10"

# Synchronization
parking_lot = "0.12"

# Database (Event Store)
rusqlite = { version = "0.38", features = ["bundled"] }

# Binary serialization
bincode = "1.3"

# CRC32 for checksum validation
crc32fast = "1.4"

# Lazy initialization
once_cell = "1.21"

# Async utilities
futures = "0.3"
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }

[features]
default = []
# CI tests with mock LLM
ci-tests = []
# Real LLM smoke tests (costs money, manual trigger only)
real-llm-tests = []

[dev-dependencies]
tempfile = "3.24"
assert_cmd = "2.1"
predicates = "3.1"
tokio-test = "0.4"

[[bin]]
name = "claude-pilot"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
